--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>OrderBook</groupId>
     <artifactId>OrderBook</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-alpha-01</version>
     <packaging>jar</packaging>
 
     <name>OrderBook</name>
